# power_of_three

./: .env.example  .gitignore  fix_database_method.py  fix_encoding_error.py  main.py  power_of_3_example.py  power_of_3_signal_generator.py  pyproject.toml  reorganize_code.py  run_backtest.py  setup_backtesting.py  test_split_modules.py
database/: schema.sql
scripts/: run_live_trading.py  setup_database.py
src/power_of_3/backtesting/: __init__.py  engine.py  interface.py
src/power_of_3/brokers/: oanda_broker.py
src/power_of_3/config/: settings.py
src/power_of_3/core/: liquidity_zones.py  manipulation_detector.py  session_detector.py  signal_generator.py  types.py
src/power_of_3/data/: live_feed.py
src/power_of_3/data/providers/: data_provider.py
src/power_of_3/database/: repository.py
src/power_of_3/live/: trading_engine.py
src/power_of_3/utils/: signal_formatter.py
